# client

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Selaura.sln  Selaura.vcxproj  Selaura.vcxproj.filters
.github/workflows/: build.yml
Selaura.dir/MinSizeRel/: objects.txt
Selaura.dir/RelWithDebInfo/: objects.txt
include/: CMakeLists.txt
include/imgui/backends/: imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_selaura.cpp  imgui_impl_selaura.hpp
include/kiero/: kiero.cpp
include/magic_enum/: magic_enum.hpp
src/: instance.cpp  instance.hpp  main.cpp  main.hpp  pch.hpp  platform.cpp  selaura.cpp  selaura.hpp
src-bedrock/: CMakeLists.txt
src-bedrock/client/common/: IMinecraftApp.cpp  IMinecraftApp.hpp
src-bedrock/client/game/: IMinecraftGame.cpp  IMinecraftGame.hpp
src-client/: CMakeLists.txt  instance.cpp  instance.hpp  platform.cpp  platform.hpp
src-client/plugins/: plugin.hpp  plugin_api.hpp  runtime.hpp  runtime_linkage.hpp
src-native-plugin/: CMakeLists.txt  main.cpp
src/client/: instance.cpp  instance.hpp  platform_backend.hpp  selaura.cpp  selaura.hpp  types.hpp
src/client/event/: event.hpp
src/client/feature/: feature.hpp  feature_manager.hpp
src/client/handlers/: event.hpp  input.cpp  input.hpp
src/client/hook/: hook.cpp  hook.hpp  hook_manager.hpp
src/client/hook/impl/: screenview.cpp  screenview.hpp  splash_text.cpp  splash_text.hpp  visual_hooks.cpp  visual_hooks.hpp
src/client/io/: io.cpp  io.hpp  logger.cpp  logger.hpp
src/client/renderer/: renderer.hpp
src/client/scripting/: script_lib.hpp
src/client/symbol/: map.cpp  map.hpp  module.cpp  module.hpp  resolver.cpp  resolver.hpp
src/client/types/: event_types.hpp
src/client/utils/: winrt_utils.cpp  winrt_utils.hpp
src/core/bedrock/: common_types.hpp
src/core/bedrock/actor/: actor.hpp
src/core/bedrock/client/: client_instance.hpp  client_instance_interface.hpp  gui_data.hpp
src/core/bedrock/client/renderer/: imgui_impl_mc_tess.cpp  imgui_impl_mc_tess.hpp  minecraft_ui_render_context.hpp  screen_context.hpp  tessellator.cpp  tessellator.hpp
src/core/bedrock/core/math/: color.cpp  color.hpp  vec2.hpp  vec3.hpp
src/core/bedrock/core/utility/: enable_non_owner_references.hpp
src/core/bedrock/entity/components/: aabb_shape_component.hpp  state_vector_component.hpp
src/core/bedrock/entity/gamerefs_entity/: entity_context.hpp
src/core/bedrock/gamerefs/: enable_get_weak_ref.hpp
src/core/bedrock/network/: network_identifier.hpp  packet_sender.hpp
src/core/bedrock/platform/: uuid.cpp  uuid.hpp
src/core/bedrock/world/actor/: actor.hpp  mob.hpp
src/core/bedrock/world/actor/player/: localplayer.hpp  player.hpp
src/core/bedrock/world/level/: game_type.hpp  level.hpp  level_interface.hpp  level_seed.hpp  level_settings.hpp
src/core/bedrock/world/phys/: aabb.hpp
src/core/event/: event.hpp
src/core/hook/: hook.hpp
src/core/io/: logger.hpp
src/core/platform/: linux.cpp  linux.hpp  windows.cpp  windows.hpp
src/core/scripting/: script_lib.hpp
src/core/types/: actor.hpp
src/event/: event_handler.hpp  event_manager.cpp  event_manager.hpp
src/event/impl/: event_types.hpp
src/feature/: feature.cpp  feature.hpp  feature_manager.hpp
src/hook/: hook_manager.cpp  hook_manager.hpp
src/hook/impl/: hook_registry.cpp  hook_registry.hpp  internal_hooks.cpp  internal_hooks.hpp  visual_hooks.cpp  visual_hooks.hpp
src/input/: input_manager.cpp  input_manager.hpp  key.hpp  magic_vtable.hpp
src/io/: logger.cpp  logger.hpp
src/load/: dllmain.cpp  dllmain.hpp  linux_main.cpp  linux_main.hpp  main.cpp  main.hpp
src/memory/: hooks.cpp  hooks.hpp  memory_handler.cpp  memory_handler.hpp
src/memory/hooks/: bgfx_hooks.cpp  bgfx_hooks.hpp  screenview.cpp  screenview.hpp  swapchain.cpp  swapchain.hpp
src/memory/scanner/: scanner.cpp  scanner.hpp
src/memory/sdk/: bgfx.cpp  bgfx.hpp
src/plugins/: plugin_api.hpp  runtime.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/screen/: screen.cpp  screen.hpp  screen_manager.hpp
src/screen/impl/: click_gui.cpp  click_gui.hpp
src/scripting/: script_manager.cpp  script_manager.hpp
src/sdk/: globals.hpp  process.cpp  process.hpp  signatures.hpp  symbol.cpp  symbol.hpp
src/sdk/mc/: ClientInstance.cpp  ClientInstance.hpp  GuiData.cpp  GuiData.hpp  HashedString.hpp  MinecraftGame.cpp  MinecraftGame.hpp  MinecraftUIRenderContext.cpp  MinecraftUIRenderContext.hpp  ScreenContext.cpp  ScreenContext.hpp  ScreenView.cpp  ScreenView.hpp  SplashTextRenderer.cpp  Tessellator.cpp  Tessellator.hpp  math.hpp  mce.cpp  mce.hpp
src/sdk/mc/game/: ClientInstance.cpp  ClientInstance.hpp  MinecraftGame.cpp  MinecraftGame.hpp
src/sdk/mc/gui/: ScreenView.cpp  ScreenView.hpp
src/sdk/mc/gui/controls/renderers/: SplashTextRenderer.cpp  SplashTextRenderer.hpp
src/sdk/mc/gui/gui/: GuiData.cpp  GuiData.hpp  UIControl.cpp  UIControl.hpp  VisualTree.cpp  VisualTree.hpp
src/sdk/mc/renderer/: Tessellator.cpp  Tessellator.hpp  TextureGroup.cpp  TextureGroup.hpp
src/sdk/mc/renderer/helpers/: MeshHelpers.cpp  MeshHelpers.hpp
src/sdk/mc/renderer/screen/: MinecraftUIRenderContext.cpp  MinecraftUIRenderContext.hpp  ScreenContext.cpp  ScreenContext.hpp
src/sdk/mc/world/phys/: Vec2.hpp  Vec3.cpp  Vec3.hpp
src/sdk/mem/: all.hpp  guide.md  process.cpp  process.hpp  signatures.hpp  storage.hpp  symbols.hpp  virtual.hpp
src/sdk/memwrap/: memwrap.hpp
